# urna-esp32s3-lvgl

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
include/: lcd_defines.h  lv_conf.h
main/: CMakeLists.txt  candidate.c  candidate.h  i2c_init.c  i2c_init.h  i2s_init.c  idf_component.yml  img_unknown.c  keypad.c  keypad.h  lcd_init.c  lcd_init.h  lvgl_init.c  lvgl_init.h  main.c  sd_init.c  sd_init.h  sound.c  sound.h  spiffs.c  spiffs.h  ui.c  ui.h  wifi.c  wifi.h
main/candidate/: candidate.c  candidate.h
main/i2c/: i2c_init.c
main/i2s/: i2s_init.c  i2s_init.h
main/keypad/: keypad.c  keypad.h
main/lcd/: lcd_init.c
main/sound/: sound.c
main/storage/: sd_init.c  sd_init.h  spiffs.c
main/ui/: lvgl_init.c  ui.c  ui.h
main/ui/assets/: img_no_photo.c
main/web_api/: web_api.c  web_api.h
main/web_api/handlers/candidate/: api_candidate.c  api_candidate.h
main/web_api/handlers/party/: api_party.c  api_party.h
main/web_api/handlers/role/: api_role.c  api_role.h
main/web_api/handlers/voting_result/: api_voting_result.c  api_voting_result.h
main/wifi/: wifi.h
sd_card_files/: candidates.jdb  candidates.jsonl  parties.jdb  roles.jdb
